# typeinfo.c

./: .gitignore  CMakeLists.txt  Makefile  README.md  extlib.h  typeinfo_metaprogram.c
.github/workflows/: build.yml
examples/: CMakeLists.txt  print_types.c  print_types.h  print_types_typeinfo.c  print_types_typeinfo.h
include/: typeinfo.h
test/: CMakeLists.txt  ctest.h  test  test.c  test_types.h
